Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.9
  Bugfix: Did not export changed options values (#2799149)
  Bugfix: Don't highlight identical words if whitespaces are ignored (#2798360)

WinMerge 2.13.8 - 2009-05-26 (r6791)
  Move executable translations to /Translations/WinMerge (r6754)
  Move InnoSetup translations to /Translations/InnoSetup (r6759)
  Move Readme translations to /Translations/Docs/Readme (r6764)
  Create translated ShellExtension RC files from PO files (#2794514)
  Allow editing context line count in patch creator (#2092180)
  Bugfix: Didn't show correct EOL chars if whitespace chars were turned off
    and again on (#2791402)
  Bugfix: Wrong whitespace character highlighted in difference (#2795599)
  Bugfix: Generated patch had wrong file time for UTF-16 files (#2791506)

WinMerge 2.13.7 - 2009-05-13 (r6744)
  Add more C/C++ types to syntax highlight (#2776705)
  Improve startup time (#2788142)
  Create config log file to My Documents-folder (#2789839)
  Installer: Do not install DLL plugins (#2783915)
  Installer: Don't set -x for TSVN command line (#2791093)
  Bugfix: Crash if tabs or EOLs in command line (#2726995)
  Bugfix: Reports had same left/right descriptions (#2772646)
  Bugfix: Diff view highlighted last char diff incorrectly (#2785186)
  Bugfix: Could select prediffer when plugins were disabled (#2787131)
  Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
  Bugfix: "##" in file filter pattern caused an infinite loop (#2789345)
  Bugfix: File wm_*.* in temporary folder caused an infinite loop (#2789348)
  Bugfix: Opening mixed-EOL file one side forced both files to be handled as
    mixed-eol files (#2022312)
  Bugfix: Created backup file with wrong name if original file had only
    extension (#2790610)

WinMerge 2.13.6 - 2009-04-16 (r6665)