@@ -6,6 +6,7 @@ http://winmerge.org/tracker/[tracker-id]
 WinMerge 2.13.9
   Bugfix: Did not export changed options values (#2799149)
   Bugfix: Don't highlight identical words if whitespaces are ignored (#2798360)
+  Bugfix: Did not reset folder compare method back to original (#2803152)
 
 WinMerge 2.13.8 - 2009-05-26 (r6791)
   Move executable translations to /Translations/WinMerge (r6754)
